View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031295 | Open CASCADE | OCCT:Foundation Classes | public | 2020-01-13 11:50 | 2020-12-02 17:12 |
Reporter | osa | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031295: Foundation Classes, BVH_Tools - incorrect detection of ray-box intersection | ||||
Description | Incorrect check of existing intersection in RayBoxIntersection() method that computes hit time of ray-box intersection in BVH_Tools | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR31295 has been created by osa. SHA-1: 375f76da985bfddd282b2b5e934bfcef5687039e Detailed log of new commits: Author: osa Date: Mon Jan 13 12:14:59 2020 +0300 0031295: Foundation Classes, BVH_Tools - incorrect detection of ray-box intersection |
|
Branch CR31295 has been deleted by inv. SHA-1: 375f76da985bfddd282b2b5e934bfcef5687039e |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-01-13 11:50 | osa | New Issue | |
2020-01-13 11:50 | osa | Assigned To | => abv |
2020-01-13 11:50 | osa | Relationship added | related to 0031186 |
2020-01-13 11:50 | osa | Assigned To | abv => osa |
2020-01-13 11:50 | osa | Status | new => assigned |
2020-01-13 11:53 | kgv | Product Version | => 7.5.0 |
2020-01-13 11:53 | kgv | Summary | Foundation Classes - incorrect detection of ray-box intersection => Foundation Classes, BVH_Tools - incorrect detection of ray-box intersection |
2020-01-13 12:18 | git | Note Added: 0089867 | |
2020-01-13 14:55 | osa | Assigned To | osa => kgv |
2020-01-13 14:55 | osa | Status | assigned => resolved |
2020-01-13 14:55 | osa | Steps to Reproduce Updated | |
2020-01-13 14:59 | kgv | Assigned To | kgv => bugmaster |
2020-01-13 14:59 | kgv | Status | resolved => reviewed |
2020-01-14 18:24 | bugmaster | Status | reviewed => tested |
2020-01-18 12:27 | bugmaster | Changeset attached | => occt master 9df71488 |
2020-01-18 12:27 | bugmaster | Status | tested => verified |
2020-01-18 12:27 | bugmaster | Resolution | open => fixed |
2020-01-18 15:36 | git | Note Added: 0089945 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
The file specified in $g_log_destination "/var/log/mantis/bugs/LDAP.log" is not writable.