0031295: Foundation Classes, BVH_Tools - incorrect detection of ray-box intersection